--- a/css/styles.css
+++ b/css/styles.css
@@ -9,66 +9,19 @@ body{
     font-size: 16px;
 }
 
-li,a,button{
+li,a{
     font-size: 1em;
     text-decoration: none;
 }
-header{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 2px 10%;
-    background-color: hsl(0, 0%, 98%);
-}
 
-#logo{
-    text-transform: uppercase;
-    margin-right: auto;
-    cursor: pointer;
-    color: hsl(256, 26%, 20%);
-}
-
-.nav_links{
-    list-style: none;
-
-}
-
-.nav_links li{
-    display: inline-block;
-    padding: 15px;
-}
-
-.nav_links li a{
-    transition: all 0.3s ease 0s;
-    color: hsl(273, 4%, 51%);
-}
-
-.nav_links li a:hover{
-    color: hsl(270, 9%, 17%);
-}
-
-button{
-    transition: all 0.3s ease 0s;
-    color: hsl(256, 26%, 20%);
-    padding: 8px 10px;
-    border: 1px solid hsl(256, 26%, 20%);
-    text-transform: uppercase;
-    background-color: hsl(0, 0%, 98%);
-    margin-left: 10px;
-}
-
-button:hover{
-    background-color: hsl(270, 9%, 17%);
-    cursor: pointer;
-    color: hsl(0, 0%, 98%);
-}
 
 .toggle-btn{
-    display: none;
+    display: none ;
     cursor: pointer;
     position: absolute;
     top: 1.5rem;
     right: 1.5rem;
+    
     
 
 }
@@ -99,13 +52,115 @@ button:hover{
     transform: rotate(45deg) translate(-8px,-8px);
 }
 
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: hsl(0, 0%, 98%);
+    color: hsl(256, 26%, 20%);
+    margin: 0 10%;
+}
+#logo{
+    font-size: 1.5em;
+    text-transform:uppercase ;
+
+}
+
+.navbar_links ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.navbar_links li{
+    list-style: none;
+}
+
+.navbar_links li a{
+    text-decoration: none;
+    color: hsl(273, 4%, 51%);
+  
+    margin-top: 10px;
+    display: block;
+    text-transform: uppercase;
+}
+.navbar_links li{
+    padding: 10px;
+}
+
+.navbar_links li a:hover{
+    color: hsl(270, 9%, 17%);
+}
+
+.navbar_links li:last-child{
+    border: 1px hsl(256, 26%, 20%) solid;
+    padding: 0px 12px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+#cta:hover{
+    color: hsl(0, 0%, 98%);
+    
+    
+}
+
+.navbar_links li:last-child:hover{
+    background-color: hsl(256, 26%, 20%);
+    color: hsl(0, 0%, 98%);
+    cursor: pointer;
+}
+
 @media (max-width:600px){
     .toggle-btn{
-        display: inline-block
+        display: block;
     }
-
-    .nav_links,.cta{
+    .navbar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navbar_links{
         display: none;
         width: 100%;
+        background-color: hsl(256, 26%, 20%);
+       
+        position: absolute;
+        top: 80px;
+        right: 0;
+        height: 500px;
+        padding-top: 28px;
+        background-image: url("../images/bg-pattern-mobile-nav.svg");
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-size: contain;
+        
+        
+    }
+    .navbar_links ul{
+        
+        width: 100%;
+        flex-direction: column;
+    
+        
+
+    }
+
+    .navbar_links li{
+    text-align: center;
+    color: hsl(0, 0%, 98%);
+    
+    }
+
+    .navbar_links li a:hover{
+        color: hsl(0, 0%, 98%);
+    }
+
+    .navbar_links.active{
+        display: flex;
+    }
+    .navbar_links li:last-child{
+        border: 1px hsl(0, 0%, 98%) solid;
+        width: 80%;
+        margin: 0 auto;
+    
     }
 }
