--- a/css/styles.css
+++ b/css/styles.css
@@ -1,168 +1,223 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&display=swap');
-*{
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&display=swap");
+* {
+  box-sizing: border-box;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-}
-
-li,a{
-    font-size: 1em;
-    text-decoration: none;
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
 }
 
 
-.toggle-btn{
-    display: none ;
-    cursor: pointer;
-    position: absolute;
-    top: .75rem;
-    right: 1.5rem;
-    
-    
 
+/* grid layout */
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+  border: 1px solid black;
 }
 
-.bar1,.bar2,.bar3{
-    width: 35px;
-    height: 5px;
-    background-color: hsl(256, 26%, 20%);
-    margin: 6px  0;
-    transition: 0.4s;
-    
+.row{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.row::after{
+    content:"";
+    clear: both;
+    display: table;
+}
+
+.col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-4 {
+  width: 33.33%;
+}
+.col-5 {
+  width: 41.66%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
+}
+
+li,
+a {
+  font-size: 1em;
+  text-decoration: none;
+}
+
+.toggle-btn {
+  display: none;
+  cursor: pointer;
+  position: absolute;
+  top: 0.75rem;
+  right: 1.5rem;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: hsl(256, 26%, 20%);
+  margin: 6px 0;
+  transition: 0.4s;
 }
 /* rotate first bar */
-.change .bar1{
-    transform: rotate(-45deg) translate(-9px,6px);
-
+.change .bar1 {
+  transform: rotate(-45deg) translate(-9px, 6px);
 }
 
 /* fade out second bar */
 
-.change .bar2{
-    opacity: 0;
+.change .bar2 {
+  opacity: 0;
 }
 
 /* rotate last bar */
 
-.change .bar3{
-    transform: rotate(45deg) translate(-8px,-8px);
+.change .bar3 {
+  transform: rotate(45deg) translate(-8px, -8px);
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: hsl(0, 0%, 98%);
-    color: hsl(256, 26%, 20%);
-    margin: 0 10%;
-}
-.logo{
-    font-size: 1.5em;
-    text-transform:uppercase ;
-
+header {
+  background-color: hsl(0, 0%, 98%);
 }
 
-.navbar_links ul{
-    margin: 0;
-    padding: 0;
-    display: flex;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  color: hsl(256, 26%, 20%);
+  width: 80%;
+  margin: 0 auto;
+}
+.logo {
+  font-size: 1.5em;
+  text-transform: uppercase;
 }
 
-.navbar_links li{
-    list-style: none;
+.logo:hover {
+  cursor: pointer;
 }
 
-.navbar_links li a{
-    text-decoration: none;
-    color: hsl(273, 4%, 51%);
-  
-    margin-top: 10px;
+.navbar_links ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navbar_links li {
+  list-style: none;
+}
+
+.navbar_links li a {
+  text-decoration: none;
+  color: hsl(273, 4%, 51%);
+
+  margin-top: 10px;
+  display: block;
+  text-transform: uppercase;
+}
+.navbar_links li {
+  padding: 10px;
+}
+
+.navbar_links li a:hover {
+  color: hsl(270, 9%, 17%);
+}
+
+.navbar_links li:last-child {
+  border: 1px hsl(256, 26%, 20%) solid;
+  padding: 0px 12px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+#cta:hover {
+  color: hsl(0, 0%, 98%);
+}
+
+.navbar_links li:last-child:hover {
+  background-color: hsl(256, 26%, 20%);
+  color: hsl(0, 0%, 98%);
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .toggle-btn {
     display: block;
-    text-transform: uppercase;
-}
-.navbar_links li{
-    padding: 10px;
-}
-
-.navbar_links li a:hover{
-    color: hsl(270, 9%, 17%);
-}
-
-.navbar_links li:last-child{
-    border: 1px hsl(256, 26%, 20%) solid;
-    padding: 0px 12px;
-    margin-left: 10px;
-    margin-top: 10px;
-}
-#cta:hover{
-    color: hsl(0, 0%, 98%);
-    
-    
-}
-
-.navbar_links li:last-child:hover{
+  }
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .navbar_links {
+    display: none;
+    width: 100%;
     background-color: hsl(256, 26%, 20%);
-    color: hsl(0, 0%, 98%);
-    cursor: pointer;
-}
 
-@media (max-width:600px){
-    .toggle-btn{
-        display: block;
-    }
-    .navbar{
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .navbar_links{
-        display: none;
-        width: 100%;
-        background-color: hsl(256, 26%, 20%);
-       
-        position: absolute;
-        top: 68px;
-        right: 0;
-        height: 500px;
-        padding-top: 20px;
-        background-image: url("../images/bg-pattern-mobile-nav.svg");
-        background-repeat: no-repeat;
-        background-position: bottom;
-        background-size: contain;
-        
-        
-    }
-    .navbar_links ul{
-        
-        width: 100%;
-        flex-direction: column;
-    
-        
+    position: absolute;
+    top: 68px;
+    right: 0;
+    height: 500px;
+    padding-top: 20px;
+    background-image: url("../images/bg-pattern-mobile-nav.svg");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+  }
+  .navbar_links ul {
+    width: 100%;
+    flex-direction: column;
+  }
 
-    }
-
-    .navbar_links li{
+  .navbar_links li {
     text-align: center;
     color: hsl(0, 0%, 98%);
-    
-    }
+  }
 
-    .navbar_links li a:hover{
-        color: hsl(0, 0%, 98%);
-    }
+  .navbar_links li a:hover {
+    color: hsl(0, 0%, 98%);
+  }
 
-    .navbar_links.active{
-        display: flex;
-    }
-    .navbar_links li:last-child{
-        border: 1px hsl(0, 0%, 98%) solid;
-        width: 50%;
-        margin: 0 auto;
-        padding-bottom: 6px;
+  .navbar_links.active {
+    display: flex;
+  }
+  .navbar_links li:last-child {
+    border: 1px hsl(0, 0%, 98%) solid;
+    width: 50%;
+    margin: 0 auto;
+    padding-bottom: 6px;
+  }
+}
 
-    
-    }
+img{
+    max-width: 100%;
 }
