--- a/css/styles.css
+++ b/css/styles.css
@@ -382,7 +382,7 @@ button:hover{
   left: 65px;
 }
 
-
+ 
 footer{
   padding-top: 80px;
   background-image: url("../images/bg-pattern-footer-desktop.svg");
@@ -416,15 +416,13 @@ footer{
 
 /* media querries */
 
-@media only screen and (min-width: 375px) and (max-width: 425px){
+@media only screen and (min-width: 320px) and (max-width: 425px){
   [class*="col-"] {
     width: 100%;
     padding: 0;
     
   
   } 
-
-  
 
   .introduction .row{
     width: 100%;
@@ -498,7 +496,7 @@ footer{
 }
 
 .heading-mid{
-  font-size: 50px;
+  font-size: 40px;
   padding: 0;
 }
 
@@ -535,9 +533,8 @@ footer{
 
 .icon img:hover{
   /* cursor: pointer; */
-  fill: hsl(270, 9%, 17%);
-}
 
+}
 
 
 .header-icon{
@@ -559,7 +556,7 @@ footer{
 }
 
 
-
+/* only 768 view */
 @media (width: 768px){
  
   [class*="col-"] {
@@ -585,9 +582,7 @@ footer{
     background-image: url("../images/bg-pattern-intro-right-mobile.svg");
     background-repeat: no-repeat;
     background-position: bottom right;
-    
-    
-    
+     
   }
 
   .introduction .row{
