--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,7 @@ h1{
 [class*="col-"] {
   float: left;
   padding: 15px;
-  height: 100%;
-  
-  
-  
-  
-  
+  height: 100%;  
 }
 
 .row{
@@ -378,7 +373,7 @@ button:hover{
   position: relative;
   
   margin-top: 30px;
-  margin-left: 10px;
+  margin-left: 12px;
   left: 65px;
 }
 
@@ -539,6 +534,7 @@ footer{
 .footer-list ul{
   padding: 0;
 }
+
  footer{
    background-image: none;
    background-image: url("../images/bg-pattern-footer-mobile.svg");
@@ -670,3 +666,9 @@ footer{
   }
 
 }
+ @media (width:1440px){
+  .icons ul li{
+    position: relative;
+    margin-left: 40px;
+  }
+ }
